fix: .c-offcanvas-filters btn. text-align

--- a/src/stylesheets/components/_offcanvas-filters.scss
+++ b/src/stylesheets/components/_offcanvas-filters.scss
@@ -10,6 +10,7 @@
           @extend .w-100;
           @extend .p-0;
           @extend .font-weight-normal;
+          @extend .text-start;
 
           &.has-collapse-caret {
             @extend .d-flex;
